# screenshot-rs

./: .gitattributes  .gitignore  .napiignore  .npmignore  Cargo.toml  INSTALL.md  README.md  RELEASE.md  index.d.ts  index.js  napi.json  package-lock.json  package.json  screenshot_rs.node
.github/workflows/: CI.yml  release.yml  test.yml
__test__/: index.spec.ts
examples/: save-png.js
scripts/: postinstall.js  release.js
src/: lib.rs
