
[package]
authors = ["mscststs <github@mscststs.com>"]
edition = "2021"
name = "screenshot"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
screenshots = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
